init: first commit

--- a/frontend/text-edit.html
+++ b/frontend/text-edit.html
@@ -16,6 +16,7 @@
   <body>
     <div class="text-editer">
       <input class="title-edit" type="text" placeholder="Title" />
+      <input class="password" type="text" placeholder="Password" />
       <textarea id="myTextarea"></textarea>
     </div>
 
